src/components/explorer.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.column {
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
  flex-direction: row;
}

.grid {
  grid-auto-rows: 50px;
  grid-auto-columns: 50px;
  gap: 16px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.panel {
  border: light-dark(#888, #a0a0a0) 2px solid;
  border-radius: 15px;
  padding: 10px;
  background-color: light-dark(#f5f5f5, #090909);
}

.hPanelSpacer {
  width: 10px;
}

.vPanelSpacer {
  height: 10px;
}

.vSpacer {
  height: 30px;
}

.menu {
  min-width: 200px;
}

.about {
  margin-bottom: -5px;
  vertical-align: top;
}

.about a {
  padding-left: 8px;
  vertical-align: top;
}

.colourSquare {
  margin: 4px;
  height: 100%;
  width: 100%;
  border-width: 2px;
  border-radius: 5px;
  border-style: solid;
  box-shadow: light-dark(#ccc, #333) 2px 2px;
}

.colourSquare.selected {
  border-width: 5px;
  margin: 1px;
}

.colourSquare:hover {
  border-width: 5px;
  margin: 1px;
  transition: border-width 0.1s linear;
  transition: margin 0.1s linear;
}

.colourSquare.copyable {
  cursor: copy;
}

.status {
  height: 20px;
}

.menu {
  text-align: left;
  padding-left: 12px;
}

input {
  margin-left: 12px;
  margin-right: 12px;
}

